03 - Limits/sonarqube/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonarqube
  annotations:
    app.openshift.io/connects-to: '[{"apiVersion":"apps/v1","kind":"StatefulSet","name":"postgresql"}]'
    app.openshift.io/vcs-uri: https://github.com/SonarSource/docker-sonarqube
  labels:
    app.kubernetes.io/part-of: sonarqube
    app.openshift.io/runtime: java
    app.openshift.io/runtime-version: "17"
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: sonarqube
      app.kubernetes.io/component: frontend
  template:
    metadata:
      labels:
        app.kubernetes.io/name: sonarqube
        app.kubernetes.io/component: frontend
    spec:
      containers:
      - name: sonarqube
        image: sonarqube:10.0.0-community
        ports:
        - name: http
          containerPort: 9000
          protocol: TCP
        resources:
          requests:
            memory: "1024Mi"
            cpu: "250m"
          limits:
            memory: "4096Mi"
            cpu: "1"
