03 - Limits/sonarqube/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: sonarqube
spec:
  port:
    targetPort: ceserver
  tls:
    termination: edge
  to:
    kind: Service
    name: sonarqube
